[package]
name = "chemistru-macro-map"
version = "0.1.0"
edition = "2021"

description = "Procedural macro that generates a constant time mapping of proton number to its element"
license = "BSD-3"
documentation = "https://docs.rs/chemistru-macro-map"
repository = "https://github.com/Ross-Morgan/chemistru-macro-map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
chemistru-elements = "0.5.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
syn = "2.0.38"
